# trabalho-02-gabrielvilas_marcus

relatorio/: relatorio.tex  relatorio2.tex
workspace/: sl.cabal
workspace/Tests/: operacoes.sl  struct.sl
workspace/src/: Main.hs
workspace/src/Frontend/Lexer/: SlLexer.x  Token.hs
workspace/src/Frontend/Parser/: AstToTree.hs  SlParser.y
workspace/src/Frontend/Pretty/: SlPretty.hs
workspace/src/Frontend/Syntax/: SlSyntax.hs
workspace/src/Semantics/: SlInterpreter.hs  SlTypeChecker.hs  SlTypeEnv.hs
