cabal-version:       2.4
name:                sl
version:             0.1.0.0
synopsis:            Compilador para a linguagem SL (Simple Language)
license:             MIT
author:              Aluno BCC328
maintainer:          aluno@ufop.edu.br
category:            Language
build-type:          Simple

-- Definição do Executável
executable slc
  -- Arquivo principal (onde está a função main)
  main-is:             Main.hs

  -- Pasta onde estão os códigos fontes
  hs-source-dirs:      src

  -- Linguagem padrão
  default-language:    Haskell2010

  -- Módulos que compõem o seu projeto (exceto o Main)
  -- O Cabal é esperto: ao ver SlLexer e SlParser aqui, ele procura
  -- por .x e .y na pasta src/Frontend/... e roda as ferramentas automaticamente.
  other-modules:
      Frontend.Syntax.SlSyntax
      Frontend.Lexer.Token
      Frontend.Lexer.SlLexer
      Frontend.Parser.SlParser
      Frontend.Pretty.SlPretty

  -- Dependências de bibliotecas Haskell
  build-depends:
      base       >= 4.7 && < 5
    , array      >= 0.5         
    , pretty     >= 1.1         
    , containers >= 0.6         

  -- Ferramenta de construção necessárias
  -- Isso garante que o 'cabal' encontre os executáveis alex e happy
  build-tool-depends:
      alex:alex
    , happy:happy

  -- Opções de compilação (Avisos de erros comuns)
  ghc-options: -Wall -Wno-unused-matches -Wno-name-shadowing