cabal-version:       2.4
name:                sl
version:             0.1.0.0
synopsis:            Compilador para a linguagem SL (Simple Language)
license:             MIT
author:              Aluno BCC328
maintainer:          aluno@ufop.edu.br
category:            Language
build-type:          Simple

executable slc
  main-is:             Main.hs

  hs-source-dirs:      src

  default-language:    Haskell2010

  other-modules:
      Frontend.Syntax.SlSyntax
      Frontend.Lexer.Token
      Frontend.Lexer.SlLexer
      Frontend.Parser.SlParser
      Frontend.Pretty.SlPretty
      Frontend.Parser.AstToTree

  build-depends:
      base       >= 4.7 && < 5
    , array      >= 0.5         
    , pretty     >= 1.1         
    , containers >= 0.6         


  build-tool-depends:
      alex:alex
    , happy:happy

  ghc-options: -Wall -Wno-unused-matches -Wno-name-shadowing